preparing to integrate TrackingMap class from Bigraph Framework library